# yield-curve-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_explore_data.ipynb
scripts/: 01_download_and_plot_curve.py  02_build_history_dataset.py  03_fit_nelson_siegel.py  04_pca_factors.py  05_generate_scenarios.py  06_portfolio_risk_demo.py
src/yieldcurve/: __init__.py  clean.py  config.py  download.py  models.py  pca.py  plotting.py  risk.py  scenarios.py
tests/: test_clean.py  test_models.py
